Fixed modal caption text overflow

--- a/src/less/core/modal.less
+++ b/src/less/core/modal.less
@@ -271,6 +271,9 @@
     margin-bottom: @modal-caption-margin-bottom;
     color: @modal-caption-color;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     .hook-modal-caption;
 }
 
